[refs #00083] Fix overspilling content
On large screens, sub-navs were pulling out of their container and
causing horizontal scrollbars. This *only* needs to happen on small
screens, so I chucked it in a conditional.

--- a/components/nav-primary/_components.nav-primary.scss
+++ b/components/nav-primary/_components.nav-primary.scss
@@ -200,6 +200,12 @@
     padding-top: $global-spacing-unit;
     padding-bottom: $global-spacing-unit;
     margin-top: $global-spacing-unit;
+
+    .has-sub-nav & {
+      margin-right: 0;
+      margin-left: 0;
+    }
+
   }
 
 }
